--- a/Rouster/Base.lproj/Main.storyboard
+++ b/Rouster/Base.lproj/Main.storyboard
@@ -138,7 +138,7 @@
                                 <attributedString key="attributedText">
                                     <fragment content="What time will you wake up?">
                                         <attributes>
-                                            <color key="NSColor" red="0.8901960784313725" green="0.82745098039215681" blue="0.027450980392156862" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="NSColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <font key="NSFont" size="25" name="Roboto-Regular"/>
                                             <font key="NSOriginalFont" size="17" name="Copperplate"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
@@ -173,7 +173,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="25"/>
                                 <state key="normal" title="Commit">
-                                    <color key="titleColor" red="0.8901960784313725" green="0.82745098039215681" blue="0.027450980392156862" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="commitTime:" destination="J74-pY-bu3" eventType="touchUpInside" id="Hsf-iS-z5I"/>
