--- a/Rouster/Base.lproj/Main.storyboard
+++ b/Rouster/Base.lproj/Main.storyboard
@@ -36,13 +36,20 @@
                                 </attributedString>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zif-NV-lpD">
+                                <rect key="frame" x="0.0" y="20" width="600" height="531"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.73147533669999998" green="0.80463199460000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="TjE-P0-Kpl" firstAttribute="leading" secondItem="qQa-iN-OEz" secondAttribute="leadingMargin" constant="-16" id="Enh-hA-wo4"/>
+                            <constraint firstItem="xTc-87-220" firstAttribute="top" secondItem="zif-NV-lpD" secondAttribute="bottom" id="IXD-7B-bYu"/>
                             <constraint firstAttribute="trailingMargin" secondItem="TjE-P0-Kpl" secondAttribute="trailing" constant="-16" id="PSA-ev-bUb"/>
+                            <constraint firstItem="zif-NV-lpD" firstAttribute="leading" secondItem="qQa-iN-OEz" secondAttribute="leadingMargin" constant="-16" id="kYB-cZ-Fkb"/>
                             <constraint firstItem="TjE-P0-Kpl" firstAttribute="bottom" secondItem="qQa-iN-OEz" secondAttribute="bottomMargin" id="nBg-re-QSS"/>
+                            <constraint firstItem="zif-NV-lpD" firstAttribute="top" secondItem="23Z-iR-2aB" secondAttribute="bottom" id="qbI-Jw-Vmp"/>
                             <constraint firstItem="TjE-P0-Kpl" firstAttribute="top" secondItem="23Z-iR-2aB" secondAttribute="bottom" id="uNv-xb-UTb"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="zif-NV-lpD" secondAttribute="trailing" constant="-16" id="zng-Tb-2hf"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="INSTRUCTIONS" image="Instructions" id="RYu-Vx-Zd6"/>
